REGRESSION (r168685): css calc() expression fails

https://bugs.webkit.org/show_bug.cgi?id=134059

Source/WebCore:
The expression 'calc((100% - 20px) / 3' did not work properly after r168685,
because primitiveType() function in CSSCalculationValue.cpp has handled
CalcPercentLength and CalcPercentNumber categories as if they were angles.
The patch fixes this incorrect behavior.

Reviewed by Simon Fraser.

Test: fast/css/calc-percentage-pixel.html

* css/CSSCalculationValue.cpp:

LayoutTests:
Added test demonstrates that expressions like
'calc((100% - 20px) / 3' work correctly again.

Reviewed by Simon Fraser.

* fast/css/calc-percentage-pixel-expected.html: Added.
* fast/css/calc-percentage-pixel.html: Added.

git-svn-id: http://svn.webkit.org/repository/webkit/trunk@170544 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Change-Id: I2cebbb43b511c8c3634c55a97598d362ae0a1ab3
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>