Source/WebCore/css/CSSCalculationValue.cpp
@@ -551,14 +551,14 @@ public:
         case CalcVariable:
             return CSSPrimitiveValue::CSS_VARIABLE_NAME;
 #endif
-        case CalcPercentLength:
-        case CalcPercentNumber:
         case CalcAngle:
             return CSSPrimitiveValue::CSS_DEG;
         case CalcTime:
             return CSSPrimitiveValue::CSS_MS;
         case CalcFrequency:
             return CSSPrimitiveValue::CSS_HZ;
+        case CalcPercentLength:
+        case CalcPercentNumber:
         case CalcOther:
             return CSSPrimitiveValue::CSS_UNKNOWN;
         }
